9/26/2022
Updated JNewton to use Java 19 since panama has entered preview.