@@ -3,7 +3,7 @@ package crab.newton;
 import crab.newton.callbacks.NewtonCollisionTreeRayCastCallback;
 import crab.newton.callbacks.NewtonTreeCollisionFaceCallback;
 import crab.newton.internal.*;
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public final class NewtonTreeCollision implements NewtonCollision {
 	
@@ -27,8 +27,8 @@ public final class NewtonTreeCollision implements NewtonCollision {
 		return new NewtonTreeCollision(Newton_h.NewtonCreateTreeCollisionFromMesh(world.address, mesh.address, shapeID));
 	}
 	
-	public void setUserRayCastCallback(NewtonCollisionTreeRayCastCallback rayHitCallback, ResourceScope scope) {
-		NativeSymbol rayHitCallbackFunc = NewtonCollisionTreeRayCastCallback.allocate(rayHitCallback, scope);
+	public void setUserRayCastCallback(NewtonCollisionTreeRayCastCallback rayHitCallback, MemorySession session) {
+		MemorySegment rayHitCallbackFunc = NewtonCollisionTreeRayCastCallback.allocate(rayHitCallback, session);
 		Newton_h.NewtonTreeCollisionSetUserRayCastCallback(address, rayHitCallbackFunc);
 	}
 	
@@ -37,9 +37,8 @@ public final class NewtonTreeCollision implements NewtonCollision {
 	}
 	
 	public void addFace(int vertexCount, float[] vertexList, int strideInBytes, int faceAttribute) {
-		try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-			SegmentAllocator allocator = SegmentAllocator.nativeAllocator(scope);
-			MemorySegment vertexSegment = allocator.allocateArray(Newton_h.C_FLOAT, vertexList);
+		try (MemorySession session = MemorySession.openConfined()) {
+			MemorySegment vertexSegment = session.allocateArray(Newton_h.C_FLOAT, vertexList);
 			Newton_h.NewtonTreeCollisionAddFace(address, vertexCount, vertexSegment, strideInBytes, faceAttribute);
 		}
 	}
@@ -49,23 +48,21 @@ public final class NewtonTreeCollision implements NewtonCollision {
 	}
 	
 	public int getFaceAttribute(int[] faceIndexArray, int indexCount) {
-		try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-			SegmentAllocator allocator = SegmentAllocator.nativeAllocator(scope);
-			MemorySegment indexSegment = allocator.allocateArray(Newton_h.C_INT, faceIndexArray);
+		try (MemorySession session = MemorySession.openConfined()) {
+			MemorySegment indexSegment = session.allocateArray(Newton_h.C_INT, faceIndexArray);
 			return Newton_h.NewtonTreeCollisionGetFaceAttribute(address, indexSegment, indexCount);
 		}
 	}
 	
 	public void setFaceAttribute(int[] faceIndexArray, int indexCount, int attribute) {
-		try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-			SegmentAllocator allocator = SegmentAllocator.nativeAllocator(scope);
-			MemorySegment indexSegment = allocator.allocateArray(Newton_h.C_INT, faceIndexArray);
+		try (MemorySession session = MemorySession.openConfined()) {
+			MemorySegment indexSegment = session.allocateArray(Newton_h.C_INT, faceIndexArray);
 			Newton_h.NewtonTreeCollisionSetFaceAttribute(address, indexSegment, indexCount, attribute);
 		}
 	}
 	
-	public void forEachFace(NewtonTreeCollisionFaceCallback forEachFaceCallback, Addressable context, ResourceScope scope) {
-		NativeSymbol forEachFunc = NewtonTreeCollisionFaceCallback.allocate(forEachFaceCallback, scope);
+	public void forEachFace(NewtonTreeCollisionFaceCallback forEachFaceCallback, Addressable context, MemorySession session) {
+		MemorySegment forEachFunc = NewtonTreeCollisionFaceCallback.allocate(forEachFaceCallback, session);
 		Newton_h.NewtonTreeCollisionForEachFace(address, forEachFunc, context);
 	}
 
